[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/dog.png" type="Texture" id=1]
[ext_resource path="res://Wolf.gd" type="Script" id=2]
[ext_resource path="res://Scene/Chicken.tres" type="DynamicFont" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[node name="Wolf" type="Area2D" groups=["Wolf"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EatingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EatingArea"]
shape = SubResource( 2 )

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="HungerTimer" type="Timer" parent="."]
autostart = true

[node name="EatTimer" type="Timer" parent="."]

[node name="StatusLabel" type="Label" parent="."]
margin_left = -21.0
margin_top = -119.0
margin_right = 21.0
margin_bottom = -80.0
custom_fonts/font = ExtResource( 3 )
text = "status
status"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_Wolf_area_entered"]
[connection signal="area_entered" from="EatingArea" to="." method="_on_EatingArea_area_entered"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]
[connection signal="timeout" from="EatTimer" to="." method="_on_EatTimer_timeout"]
